--- a/views/productPage.pug
+++ b/views/productPage.pug
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <div class="flex d-flex form-label mt-4">
-                <a href="/" style="text-decoration: none"><h1 class="me-4">Store</h1></a>
+                <a href="/" style="text-decoration: none"><h1 class="me-4">Day n Nite Store</h1></a>
                 <form action="/" method="POST" class="d-flex flex mt-2">
                     <input type="search" name="searchbox" class="form-control" aria-label="searchbox"
                     |    placeholder="Search Here">
