--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="flex d-flex form-label mt-4">
+        <div class="flex d-flex form-label mt-4 justify-content-between">
             <a href="/" style="text-decoration: none">
-            |    <h1 class="me-4">Store</h1>
+            |    <h1 class="me-4">Day n Nite Store</h1>
             | </a>
             <form action="/" method="POST" class="d-flex flex mt-2 col-6">
                 <input type="search" name="searchbox" class="form-control px-3" aria-label="searchbox" placeholder="Search Here">
@@ -18,9 +18,12 @@
             </form>
         </div>
         <h2 class="mt-5">Items</h2>
-        <div style="display: table; margin: 5px; grid-column: 2;">
+        <div">
             each val in products
-                p.col Name: #{val.Product_Name} || Price: #{val.Product_MRP} || Product Type: #{val.Product_type} <a href="/productPage/#{val.ProductID}">LINK</a>
+                <div class="d-flex flex" style="width: 100%;"> 
+                    <img src="#{val.Product_link}" alt="" srcset="" class="img-thumbnail me-3 m-2" style="display: block; height: 50px; width: 50px">
+                    <p class="mt-3">Name: #{val.Product_Name} || Price: #{val.Product_MRP} || Product Type: #{val.Product_type} <a href="/productPage/#{val.ProductID}">LINK</a></p>
+                </div>
             end
         </div>
     </div>
