--- a/views/productPage.pug
+++ b/views/productPage.pug
@@ -7,21 +7,55 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             |    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <title>Document</title>
+        <style>
+            html {
+            |    border: 1px black solid;
+            |}
+        </style>
     </head>
 
     <body>
         <div class="container">
-            <div class="flex d-flex form-label mt-4">
-                <a href="/" style="text-decoration: none"><h1 class="me-4">Day n Nite Store</h1></a>
-                <form action="/" method="POST" class="d-flex flex mt-2">
-                    <input type="search" name="searchbox" class="form-control" aria-label="searchbox"
+            <div class="flex d-flex form-label mt-4 justify-content-between">
+                <a href="/" style="text-decoration: none">
+                    | <h1 class="me-4">Day n Nite Store</h1>
+                    | </a>
+                <form action="/" method="POST" class="d-flex flex mt-2 col-6">
+                    <input type="search" name="searchbox" class="form-control px-3" aria-label="searchbox"
                     |    placeholder="Search Here">
                     <button type="submit" class="ms-1 px-2" value="OK">GO</button>
                 </form>
             </div>
             <h2 class="mt-5">Product Page</h2>
-            <div style="display: table; margin: 5px; grid-column: 2;">
-                p.col Name: #{products[0].Product_Name} || Price: #{products[0].Product_MRP} || Product Type: #{products[0].Product_type}
+            <div class="row mt-4">
+                <div class="col">
+                    <img src="#{products[0].Product_link}" alt="" srcset="" class="img-thumbnail me-3 m-2"
+                    |    style="display: block; height: 450px; width: 450px">
+                </div>
+                <div class="col display flex">
+                    <div class="row mt-4 justify-content-between text-center">
+                        <h2>#{products[0].Product_Name}</h2>
+                    </div>
+                    <div class="row mt-5 justify-content-between">
+                        <p><span class="fw-bold">Category</span> - #{products[0].Product_type}</p>
+                        <p><span class="fw-bold">Manufacturer</span> - #{products[0].Manufacturer}</p>
+                    </div>
+                    <div class="row mt-1 justify-content-between">
+                        <p><span class="fw-bold">MRP</span> - Rs. #{products[0].Product_MRP}</p>
+                        <p><span class="fw-bold">Applicable_SGST</span> - #{products[0].Applicable_SGST}%</p>
+                        <p><span class="fw-bold">Applicable_CGST</span> - #{products[0].Applicable_CGST}%</p>
+                    </div>
+                    <div class="row mt-1 justify-content-between">
+                        <p><span class="fw-bold">Description</span> - #{products[0].Product_Description}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-5 text-center" style="width: 100%;">
+                <h2 class="text-center mt-5">QnA Section</h2>
+            </div>
+
+            <div class="mt-5 text-center" style="width: 100%;">
+                <h2 class="text-center mt-5">Reviews</h2>
             </div>
         </div>
 
