--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@
             <form action="/" method="POST" class="d-flex flex mt-2 col-6">
                 <input type="search" name="searchbox" class="form-control px-3" aria-label="searchbox" placeholder="Search Here">
                 <button type="submit" class="ms-1 px-2" value="OK">GO</button>
-            </form>
+            </form><a href="/signin"><button class="button primary">#{userid} </button></a>
         </div>
         <h2 class="mt-5">Items</h2>
         <div">
