--- a/views/signin.pug
+++ b/views/signin.pug
@@ -11,7 +11,7 @@
 			<h1 style="text-align: center;" class="mt-5">Sign in</h1>
 		</div>
 		<div class="container">
-			<form action="/signin" method="POST" class="mt-4">
+			<form action="signin" method="POST" class="mt-4">
 				<div class="mt-4">
 					<input type="username" class="form-control  mt-5" name="userid"  placeholder="Enter Username">
 				</div>
