--- a/views/productPage.pug
+++ b/views/productPage.pug
@@ -24,7 +24,7 @@
                     <input type="search" name="searchbox" class="form-control px-3" aria-label="searchbox"
                     |    placeholder="Search Here">
                     <button type="submit" class="ms-1 px-2" value="OK">GO</button>
-                </form>
+                </form><a href="/signin" style="color: black; margin-top: 15px;">#{userid}</a>
             </div>
             <h2 class="mt-5">Product Page</h2>
             <div class="row mt-4">
