--- a/views/signin.pug
+++ b/views/signin.pug
@@ -12,8 +12,9 @@
 		</div>
 		<div class="container">
 			<form action="signin" method="POST" class="mt-4">
+				<p class="text-danger mt-4 text-center">#{error}</p>
 				<div class="mt-4">
-					<input type="username" class="form-control  mt-5" name="userid"  placeholder="Enter Username">
+					<input type="username" class="form-control  mt-4" name="userid"  placeholder="Enter Username">
 				</div>
 				<div class="">
 					<input type="password" class="form-control mt-4" name="userpasswd" placeholder="Enter Password">
@@ -21,7 +22,7 @@
 				<button type="submit" class="btn mt-5 btn-outline-success">Submit</button>
 			</form>
 			<aside class="mt-5">
-				<p>Don't have an account? <a href="signup.html">Sign up</a></p>
+				<p>Don't have an account? <a href="signup">Sign up</a></p>
 			</aside>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
