--- a/views/signup.pug
+++ b/views/signup.pug
@@ -1,41 +1,42 @@
 <!doctype html>
 <html lang="en">
-  	<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Sign up</title>
-  	</head>
-  	<body>
+	<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<title>Sign up</title>
+	</head>
+	<body>
 		<div class="page-header bg-light"> 
 			<h1 style="text-align: center;" class="mt-5">Sign up</h1>
 		</div>
 		<div class="container">
-			<form action="post" class="mt-4">
+			<form action="signup" method="post" class="mt-4">
+				<p class="text-danger mt-4 text-center">#{error}</p>
 				<div class="mt-4">
-					<input type="name" class="form-control  mt-5" id="name"  placeholder="Enter Name">
+					<input type="name" class="form-control  mt-5" name="name"  placeholder="Enter Name">
 				</div>
 				<div class="">
-					<input type="email" class="form-control mt-4" id="useremail" placeholder="Enter Email">	
+					<input type="email" class="form-control mt-4" name="useremail" placeholder="Enter Email">	
 				</div>
 				<div class="mt-4">
-					<input type="username" class="form-control  mt-4" id="userid"  placeholder="Enter Username">
+					<input type="username" class="form-control  mt-4" name="userid"  placeholder="Enter Username">
 				</div>
 				<div class="">
-					<input type="password" class="form-control mt-4" id="userpasswd" placeholder="Enter Password">
+					<input type="password" class="form-control mt-4" name="userpasswd1" placeholder="Enter Password">
 				</div>
 				<div class="mt-4">
-					<input type="password" class="form-control mt-4" id="userpasswd" placeholder="Confirm Password">
+					<input type="password" class="form-control mt-4" name="userpasswd2" placeholder="Confirm Password">
 				</div>
 				<div class="mt-4">
-					<input type="number" class="form-control mt-4" id="userphone" placeholder="Enter Phone Number">
+					<input type="number" class="form-control mt-4" name="userphone" placeholder="Enter Phone Number">
 				</div>
 				<button type="submit" class="btn mt-5 btn-outline-success">Submit</button>
 			</form>
 			<aside class="mt-5">
-				<p>Already have an account? <a href="signin.html">Sign in</a></p>
+				<p>Already have an account? <a href="signin">Sign in</a></p>
 			</aside>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  	</body>
+	</body>
 </html>
