--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@
             </form><a href="/signin" style="color: black; margin-top: 15px;">#{userid}</a>
         </div>
         <h2 class="mt-5">Items</h2>
-        <div">
+        <div>
             each val in products
                 <div class="d-flex flex" style="width: 100%;"> 
                     <img src="#{val.Product_link}" alt="" srcset="" class="img-thumbnail me-3 m-2" style="display: block; height: 50px; width: 50px">
