added card data

--- a/views/paymentsO.pug
+++ b/views/paymentsO.pug
@@ -30,7 +30,7 @@
                     <p class="text.dark"><span class="fw-bold">Credit/Debit Cards</span></p>
                         each val3 in creditDebit
                             <div class="mx-5" style="width: 100%;">
-                            <p class="text.dark"><span class="fw-bold">Card Number: </span>#{val3.Card_Number}  || <span class="fw-bold">Holder Name: </span>#{val3.Holder_Name} ||  <span class="fw-bold">Expiry Date: </span>#{val3.Expiry_Date}</p>
+                            <p class="text.dark"><span class="fw-bold">Card Number: </span>#{val3[0].Card_Number}  || <span class="fw-bold">Holder Name: </span>#{val3[0].Holder_Name} ||  <span class="fw-bold">Expiry Date: </span>#{val3[0].Expiry_Date}</p>
                             </div>
                         end
                     </div>
