--- a/views/user.pug
+++ b/views/user.pug
@@ -34,11 +34,11 @@
               <div class="navbar-brand fs-8 fw-bold text-info col">Wish List</div>
               Bootstrap
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/cart">
               <div class="navbar-brand fs-8 fw-bold text-primary col">Cart</div>
               Bootstrap
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/paymentsO">
               <div class="navbar-brand fs-7 fw-bold text-info col">Payment Options</div>
               Bootstrap
             </a>
