--- a/views/cart.pug
+++ b/views/cart.pug
@@ -23,21 +23,38 @@
                     <button type="submit" class="ms-1 px-2" value="OK">GO</button>
                 </form><a href="/signin" style="color: black; margin-top: 15px;">#{userid}</a>
             </div>
-            <h2 class="mt-5 mb-4">Cart</h2>
+            <h2 class="mt-5 mb-4 mx-1">Cart</h2>
             <div>
-                <div class="mb-3" style="border-bottom: 2px solid grey;">
+                <div class="mb-3">
                     <div style="width: 100%;">
-                    <p class="text.dark"><span class="fw-bold">Credit/Debit Cards</span></p>
-                        if creditDebit.length == 0
-                            <div class="mx-5" style="width: 100%;">
-                                <p class="text.dark"><span class="fw-bold">None </p>
-                            </div>
-                        else
-                            each val3 in creditDebit
-                                <div class="mx-5" style="width: 100%;">
-                                <p class="text.dark"><span class="fw-bold">Card Number: </span>#{val3[0].Card_Number}  || <span class="fw-bold">Holder Name: </span>#{val3[0].Holder_Name} ||  <span class="fw-bold">Expiry Date: </span>#{val3[0].Expiry_Date}</p>
+                    if cart_products.length == 0
+                        <div class="mx-5" style="width: 100%;">
+                            <p class="text.dark"><span class="fw-bold">None </p>
+                        </div>
+                    else
+                        <div class="mx-5" style="width: 100%; ">
+                            each val,index in cart_products
+                                <div class="d-flex flex" style="width: 100%; border-bottom: 2px solid grey;"> 
+                                    <img src="#{val.Product_link}" alt="" srcset="" class="img-thumbnail me-3 m-2" style="display: block; height: 50px; width: 50px">
+                                    <p class="mt-3">#{val.Product_Name} || <a href="/productPage/#{val.ProductID}">LINK</a> || MRP: Rs.#{val.Product_MRP} || SGST: #{val.Applicable_SGST}% || CGST: #{val.Applicable_CGST}% || Cost(1 Quantity): Rs.#{pro_total[index]}  <a href="/M#{val.ProductID}"><button type="submit" class="btn btn-secondary">-</button></a> Quantity: #{val.Quantity} <a href="/P#{val.ProductID}"><button type="submit" class="btn btn-secondary">+</button></a> Overall Cost: Rs.#{pro_q_total[index]}</p>
+                                    
                                 </div>
                             end
+                        </div>
+                        <div class="mx-7 mt-2 d-flex flex justify-content-end" style="width: 100%;">
+                            <p class="text.dark"><span class="fw-bold">Total Amount: </span>Rs.#{total}/- </p>
+                        </div>
+                        <div class="input-group mb-3 mx-5" style="width: 30%;">
+                          <input type="text" class="form-control"  placeholder="Coupon Code" aria-label="Enter Coupon Code" aria-describedby="basic-addon2">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button">Apply</button>
+                          </div>
+                        </div>
+
+
+                        <div class="d-flex flex justify-content-center"> 
+                            <p class="mt-3 flex-end"><a href="#"><button type="submit" class="btn btn-secondary">CHECKOUT</button></a></p>    
+                        </div>
                     </div>
                 </div>    
             </div>
