--- a/views/user.pug
+++ b/views/user.pug
@@ -72,7 +72,10 @@
 
 
         <div class="mt-5 row">
-          <div class="fs-5 fw-bold text-info col">Your Address/es:</div>
+          <div class="fs-5 fw-bold text-info col d-flex flex">
+            <p class="text">Your Address/es:</p>
+            <a href="/add_address"><button type="submit" class=" ms-4 mb-5 btn btn-outline-success">Add Address</button></a>
+          </div>
           <div>
             each val in customer_address
                 <div class="d-flex flex px-3" style="width: 100%;"> 
