--- a/views/add_address.pug
+++ b/views/add_address.pug
@@ -17,7 +17,8 @@
                 <button type="submit" class="ms-1 px-2" value="OK">GO</button>
             </form><a href="/signin" style="color: black; margin-top: 15px;">#{userid}</a>
         </div>
-        <h2 class="mt-5 mb-3">Enter Address</h2>
+        <h2 class="mt-5 mb-2">Enter Address</h2>
+        <p class="text-danger mb-2 text-center">#{error}</p>
         <form action="/add_address" method="post">
             <div class="form-group mb-2">
                 <label for="Street" class="ms-1">Street</label>
