--- a/views/my_order.pug
+++ b/views/my_order.pug
@@ -40,7 +40,7 @@
                         </div>
                         if val.Order_Status == 'D'
                             <div class="mx-4" style="width: 100%;">
-                                <p><span class="fw-bold">Delivery Status: </span>Delivered || <span class="fw-bold">Delivery Date: </span>#{val.Date_of_Ordering}</p>
+                                <p><span class="fw-bold">Delivery Status: </span>Delivered || <span class="fw-bold">Order Date: </span>#{val.Date_of_Ordering}</p>
                             </div>
                         else
                             <div class="mx-4" style="width: 100%;">
