--- a/views/productPage.pug
+++ b/views/productPage.pug
@@ -45,6 +45,10 @@
                     <div class="row mt-1 justify-content-between">
                         <p><span class="fw-bold">Description</span> - #{product[0].Product_Description}</p>
                     </div>
+                    <div class="d-flex flex">
+                        <p class="mx-5 mt-2"><a href="/AddCart/#{product[0].ProductID}"><button class="btn btn-success">Add to Cart</button></a></p>
+                        <p class="mx-5 mt-2"><a href="/AddWish/#{product[0].ProductID}"><button class="btn btn-primary">Add to Wish List</button></a></p>
+                    </div>
                 </div>
             </div>
             <div class="mt-5 mb-3 text-center" style="width: 100%;">
