--- a/views/paymentsO.pug
+++ b/views/paymentsO.pug
@@ -23,7 +23,11 @@
                     <button type="submit" class="ms-1 px-2" value="OK">GO</button>
                 </form><a href="/signin" style="color: black; margin-top: 15px;">#{userid}</a>
             </div>
-            <h2 class="mt-5 mb-4">My Payments Options</h2>
+            <div class="fs-5 fw-bold col d-flex flex mt-5 mb-2">
+                <p class="text">My Payments Options</p>
+                <a href="/add_payment_option"><button type="submit" class=" ms-4 mb-5 btn btn-outline-success">Add Payment
+                 |       Option</button></a>
+            </div>
             <div>
                 <div class="mb-3" style="border-bottom: 2px solid grey;">
                     <div style="width: 100%;">
