--- a/views/signin.pug
+++ b/views/signin.pug
@@ -19,6 +19,15 @@
 				<div class="">
 					<input type="password" class="form-control mt-4" name="userpasswd" placeholder="Enter Password">
 				</div>
+				<div class="mt-4">
+					<select class="form-control" name="Role">
+						<option>Customer</option>
+						<option>Manager</option>
+						<option>Employee</option>
+						<option>Supplier</option>
+						<option>Delivery Service</option>
+					</select>
+				</div>
 				<button type="submit" class="btn mt-5 btn-outline-success">Submit</button>
 			</form>
 			<aside class="mt-5">
